--- a/00-welcome/00.1-welcome.es.md
+++ b/00-welcome/00.1-welcome.es.md
@@ -31,7 +31,7 @@ Los siguientes son nuestros cuatro pilares aplicados en cualquiera de nuestros c
 
 1. Aula invertida: La clase será un laboratorio; vendrás a clase con lecciones/videos ya leídos y muchas preguntas. ¡Listo para practicar! La única manera de aprender habilidades técnicas es a través de la práctica.
 2. Haz preguntas: el curso se creó de una manera en la que tendrás que hacer preguntas; enfatizamos esto porque se ha convertido en una habilidad esencial para los equipos ágiles y técnicos de hoy; escribir una pregunta "de la manera correcta" te ayuda a estructurar tus ideas de manera lógica, te ayuda a comprender mejor, te permite ser mejor "buscando en Google" y también es la forma más rápida de dejar de estar atascado, que es la barrera número 1 para aprender una habilidad técnica como esta.
-3. Un poquito cada día es mejor que mucho en uno solo: [La mente olvida un 80% de lo que aprende después de 7 días](https://www.mindtools.com/pages/article/forgetting-curve.htm). Por eso es que es tan importante practicar todos los días. Este curso está diseñado para una práctica constante; perder dos clases seguidas te pondrá en una posición desafiante, será difícil recuperar esos días.
+3. Un poquito cada día es mejor que mucho en uno solo: [La mente olvida un 80% de lo que aprende después de 7 días](https://www.mindtools.com/pages/article/forgetting-curve.htm). Por eso es tan importante practicar todos los días. Este curso está diseñado para una práctica constante; perder dos clases seguidas te pondrá en una posición desafiante, será difícil recuperar esos días.
 4. Enfoque: deja que tu familia y amigos sepan sobre este curso; pídeles que te dejen enfocarte y estudiar. Las siguientes 16 semanas cambiarán tu carrera profesional para siempre, y tener una buena mentalidad es esencial para una experiencia exitosa.
 
 ## Plan de estudios del Prework en pocas palabras
