--- a/04-matplotlib/04.1-Intro-to-Matplotlib.es.ipynb
+++ b/04-matplotlib/04.1-Intro-to-Matplotlib.es.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "### Gráfico de líneas\n",
     "\n",
-    "El **gráfico de líneas** (*line plot*) representa la información en puntos conectados por líneas. Es útil para mostrar la evolución de una o más series de datos a lo largo de un eje, típicamente el tiempo,"
+    "El **gráfico de líneas** (*line plot*) representa la información en puntos conectados por líneas. Es útil para mostrar la evolución de una o más series de datos a lo largo de un eje, típicamente el tiempo."
    ]
   },
   {
