--- a/00-welcome/00.1-welcome.es.md
+++ b/00-welcome/00.1-welcome.es.md
@@ -15,11 +15,12 @@ Solo un ejemplo, aquí está una pequeña degustación sobre lo que serás capaz
 3. Predecir los precios del mercado de acciones con 70%+ de precisión (para escenarios específicos).
 4. Encontrar a personas sosteniendo armas en lugares concurridos, como  aeropuertos, conciertos, etc. 
 
-Estos ejemplos son solamente la punta del iceberg; durante este curso vas a adquirir conocimientos que te harán un candidato perfecto en la mayoría de todos los equipos de AI en el mundo; ayudarte a formar y desarrollar la inteligencia artificial más avanzada en la actualidad.
+Estos ejemplos son solamente la punta del iceberg.
+Durante este curso vas a adquirir conocimientos que te harán un candidato perfecto en la mayoría de todos los equipos de AI en el mundo, ayudarte a formar y desarrollar la inteligencia artificial más avanzada en la actualidad.
 
 ## Buscando un trabajo 
 
-Hoy en día nuestros estudiantes están trabajando en compañías como CEMEX, Blackstone, la ciudad de Coral Gables (la ciudad más avanzada en USA, en términos de AI), y muchas otras.
+Hoy en día nuestros estudiantes están trabajando en compañías como CEMEX, Blackstone, la ciudad de Coral Gables (la ciudad más avanzada en USA, en términos de AI) y muchas otras.
 
 No vas a necesitar ningún otro curso o entrenamiento; todo lo que tendrás que hacer es trabajar duro para practicar lo que vayas aprendiendo, y demostrar las mismas habilidades adquiridas en este curso durante tu próxima entrevista de trabajo. 
 
